--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "commit:eslint": "yarn prettier:write && yarn eslint"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.0",
     "next": "9.4.4",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "sass": "^1.26.9",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "@types/node": "^14.0.14",
