--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "commit:eslint": "yarn prettier:write && yarn eslint"
   },
   "dependencies": {
+    "@react-hook/window-size": "^3.0.6",
     "@types/styled-components": "^5.1.0",
     "next": "9.4.4",
     "react": "16.13.1",
