--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-hook-form": "^6.0.0",
+    "react-textarea-autosize": "^8.2.0",
     "sass": "^1.26.9",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "styled-media-query": "^2.1.2"
   },
   "devDependencies": {
     "@types/node": "^14.0.14",
