--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-hook/window-size": "^3.0.6",
     "@types/styled-components": "^5.1.0",
     "next": "9.4.4",
+    "nodemailer": "^6.4.11",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-hook-form": "^6.0.0",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@types/node": "^14.0.14",
+    "@types/nodemailer": "^6.4.0",
     "@types/react": "^16.9.41",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
