--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   "dependencies": {
     "@react-hook/window-size": "^3.0.6",
     "@types/styled-components": "^5.1.0",
+    "axios": "^0.20.0",
     "next": "9.4.4",
     "nodemailer": "^6.4.11",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-hook-form": "^6.0.0",
+    "react-hook-form": "^6.6.0",
     "react-textarea-autosize": "^8.2.0",
     "sass": "^1.26.9",
     "styled-components": "^5.1.1",
