--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/styled-components": "^5.1.0",
     "axios": "^0.20.0",
     "next": "9.4.4",
+    "nextjs-basic-auth-middleware": "^0.1.0",
     "nodemailer": "^6.4.11",
     "react": "16.13.1",
     "react-dom": "16.13.1",
